[FIX] Your Announcements, Alignment

--- a/generic/public/stylesheets/global.css
+++ b/generic/public/stylesheets/global.css
@@ -524,6 +524,7 @@ h3.name {font-size:140%;border-bottom:1px dashed #e8e8e8; padding:40px 0 10px 0;
 .phone-alert-settings #voice li span{font-size:18px; padding:0 8px 0 0;}
 .phone-alert-settings #sms, .phone-alert-settings #voice {margin:0 0 6px 0;}
 
+.your-announce{width:580px;}
 
 
 
